# tracker_dcs_web

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  python-package.yml
notebooks/: labview_pandas.ipynb
requirements/: base.txt  local.txt
tracker_dcs_web/: mqtt.py
tracker_dcs_web/scripts/: dummy_labview.py  test_dummy_labview.py
tracker_dcs_web/web_server/: .app.py.swp  app.py  data.py
tracker_dcs_web/web_server/data/: __init__.py  mapping.py  measurements.py  metadata.py  sensor.py
unittests/: .coveragerc  fixtures.py  test_mqtt.py
unittests/app/: test_app.py  test_data.py
unittests/data/labview/: header.txt  mapping.txt  measure_line.txt  measure_lines_8.txt  measures.txt  mesures.txt
unittests/web_server/: test_app.py  test_data.py
unittests/web_server/data/: test_mapping.py  test_measurements.py  test_sensor.py
web_server/: app.py
